39-EKS-Ingress-Cross-Namespaces/04-ingress-cross-ns-kube-manifests/app3/01-nginx-app-03-deploy-and-nodeport-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-03-nginx-deployment
  labels:
    app: app-03-nginx 
  namespace: ns-app-03        
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-03-nginx
  template:
    metadata:
      labels:
        app: app-03-nginx
    spec:
      containers:
        - name: app-03-nginx
          image: headinthecloudsonline/nginx-app-03:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-03-nginx-nodeport-service
  labels:
    app: app-03-nginx
  namespace: ns-app-03    
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: app-03-nginx
  ports:
    - port: 80
      targetPort: 80
